<resources>
    <string name="app_name">FoodPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_message">Ingredients for\n any recipe</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="login_underlined"><u>Login</u></string>
    <string name="signup_underlined"><u>Sign up</u></string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="remember_me">remember me</string>
    <string name="email_or_password_incorrect">username or password is incorrect</string>
    <string name="server_busy_try_again">Server busy please try again later</string>
    <string name="unexpected_error_try_again">unexpected error occurred please try again</string>
    <string name="login_successful">Login Successful</string>
    <string name="required">Required</string>
    <string name="not_formatted_email">Not email</string>
    <string name="not_valid_email">Not formatted email</string>
    <string name="no_user_with_this_email">No user with this Email please SIGN UP</string>
    <string name="login_failed">Login Failed</string>
    <string name="email_valid_digits">qwertyuiopasdfghjklzxcvbnm._@0123456789</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="mail">Enter your mail</string>
    <string name="pass">Enter Password</string>
    <string name="confirm_password">Confirm the Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="mail_sign">Sign Up With Mail</string>
    <string name="email_exist_error">This Email Already Exists</string>
    <string name="sign_loading">Sign up process is loading</string>
    <string name="cancel">Cancel</string>
    <string name="weak_password_error">"Enter Strong Password"</string>
    <string name="invalid_mail_error">"Invalid Email"</string>
    <string name="network_error">"Check Network connection"</string>
    <string name="add_to_fav">Favourite</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_category">Meal Category</string>
    <string name="view_all"><u>VIEW ALL</u></string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="planned">Planned</string>
    <string name="profile">Profile</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="search_by_ingredients">Search by Ingredients</string>
    <string name="search_by_categories">Search by Categories</string>
    <string name="search_by_countries">Search by Countries</string>
    <string name="search_by_user_meals">Search by User Meals</string>
    <string name="select_thumbnail">select thumbnail</string>
    <string name="instructions">Instructions</string>
    <string name="add">Add</string>
    <string name="make_your_plan">Make Plan Of Week</string>
    <string name="guest"><u>Guest</u></string>
    <string name="logout">Logout</string>
    <string name="profile_image">profile image</string>
    <string name="change_password">Change Password</string>
    <string name="upload_profile_image">Upload profile image</string>
    <string name="sign_out_successfully">Sign-out successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="multi_filter">multi_filter</string>
    <string name="percent">%1$d\%%</string>
    <string name="filter_list">filter list</string>
    <string name="ingredients">Ingredients</string>
    <string name="areas">Areas</string>
    <string name="categories">Categories</string>
    <string name="filter">Filter</string>
    <string name="passwords_doest_match">Passwords doesn\'t match</string>
    <string name="password_less_than_7"><![CDATA[Password length must be > 7]]></string>
    <string name="registration_options">Registration options</string>
    <string name="inspiration">Inspiration</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="add_ingredient">Add %1$d Ingredient</string>
    <string name="step">STEP %1$d</string>
    <string name="by">by</string>
    <string name="rating_and_comments">Rating and Comments</string>
    <string name="tap_to_rate">Tap to Rate</string>
    <string name="leave_a_comment_or_photo">Leave a comment or photo</string>
    <string name="same_category">Same Category</string>
    <string name="same_area">Same Area</string>
    <string name="you_might_also_like">You Might Also Like...</string>
    <string name="same_chef">Same Chef</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="type_your_recipe_name_here">Type your recipe name here</string>
    <string name="recipe_title">Recipe title</string>
    <string name="add_cover_image">Add Cover Image</string>
    <string name="serving_size">Serving Size</string>
    <string name="add_ingredients_to_recipe">Add ingredients to recipe</string>
    <string name="cooking_instructions">Cooking Instructions</string>
    <string name="add_one_or_multiple_steps">Add one or multiple steps</string>
    <string name="optional">(Optional)</string>
    <string name="author_notes">Author\'s Notes</string>
    <string name="add_tips_or_tricks_for_this_recipe">Add tips or tricks for this recipe</string>
    <string name="sharing_options">Sharing Options</string>
    <string name="private_not_visible_to_others"><b>Private - </b>Not visible to others</string>
    <string name="public_visible_to_others"><b>Public - </b>Visible to others</string>
    <string name="done">Done</string>
    <string name="at_least_one">(At least one)</string>
    <string name="add_video">Add Video</string>
    <string name="gallery">Gallery</string>
    <string name="youtube">Youtube</string>
    <string name="delete"><u>Delete</u></string>
    <string name="search_ingredient">Search Ingredient</string>
    <string name="measure">Measure</string>

    <string-array name="day_of_week">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

</resources>