<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_twotone_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_twotone_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/createRecipeFragment"
        android:icon="@drawable/twotone_create_24"
        android:title="@string/create_recipe" />

    <item
        android:id="@+id/plannedFragment"
        android:icon="@drawable/ic_twotone_calendar_today_24"
        android:title="@string/planned" />
    <item
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/ic_twotone_favorite_24"
        android:title="@string/favourite" />

</menu>