<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <include
        android:id="@+id/include"
        layout="@layout/layout_boarding_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/Theme.FoodPlanner.Card_Auth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButtonBack"
        app:layout_constraintVertical_bias=".35"
        app:layout_constraintWidth_percent=".9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:textColorHint="@color/text_hint"
                app:boxStrokeColor="@color/selector_text_input_layout_box_stroke"
                app:endIconTint="@color/selector_text_input_layout_end_icon_tint"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.25"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_percent=".85">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    style="@style/Theme.FoodPlanner.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/email_valid_digits"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                style="@style/Theme.FoodPlanner.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayoutEmail"
                app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
                app:layout_constraintWidth_percent=".85">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    style="@style/Theme.FoodPlanner.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/buttonLogin"
                style="@style/Theme.FoodPlanner.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxRememberMe"
                app:layout_constraintVertical_bias="0.85"
                app:layout_constraintWidth_percent=".4" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/text_hint"
                app:layout_constraintBottom_toBottomOf="@+id/checkBoxRememberMe"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
                app:layout_constraintTop_toTopOf="@+id/checkBoxRememberMe" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBoxRememberMe"
                style="@style/Theme.FoodPlanner.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/remember_me"
                android:textColor="@color/text_hint"
                app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/imageButtonBack"
        style="@style/Theme.FoodPlanner.ImageButton_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>