<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSearch"
        style="@style/Theme.FoodPlanner.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/search_ingredient"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_arrow_back_24"
        app:startIconTint="?colorOnBackground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextSearch"
            style="@style/Theme.FoodPlanner.TextInputEditText_Search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@android:color/transparent" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutMeasure"
        style="@style/Theme.FoodPlanner.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearch"
        app:placeholderText="@string/measure">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextMeasure"
            style="@style/Theme.FoodPlanner.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAdd"
        style="@style/Theme.FoodPlanner.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutMeasure"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutMeasure"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutMeasure" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewIngredients"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:itemCount="10"
        tools:listitem="@layout/recycler_view_add_ingredient_item" />

</androidx.constraintlayout.widget.ConstraintLayout>